Refactor user and store management components
Introduced form validation, improved error handling, and modularized repeated code for user and store CRUD operations. Enhanced UI feedback with alerts and validation styles for a better user experience.

--- a/src/app/moduleAdmin/component/action-link-dashboard/action-link-dashboard.component.html
+++ b/src/app/moduleAdmin/component/action-link-dashboard/action-link-dashboard.component.html
@@ -1,3 +1,3 @@
-<a class="text-primary action-link" [routerLink]="['/admin', entityType, 'details', id]">Détails |</a>
-<a class="text-primary action-link" [routerLink]="['/admin', entityType, 'modify', id]"> Modifier |</a>
-<a class="text-primary action-link" [routerLink]="['/admin', entityType, 'delete', id]" > Supprimer</a>
+<a class="text-primary action-link" [routerLink]="['/admin', verififyEntity(entityType), 'details', id]">Détails |</a>
+<a class="text-primary action-link" [routerLink]="['/admin',verififyEntity(entityType), 'modify', id]"> Modifier |</a>
+<a class="text-primary action-link" [routerLink]="['/admin', verififyEntity(entityType), 'delete', id]" > Supprimer</a>
