**Enhance user management with reactive forms and admin support**
Updated "User Ajout" and "User Modify" components to use reactive forms with validation. Added support for Administrator-specific operations, including fetching, modifying, and viewing details. Introduced UI improvements such as dynamic feedback, admin toggling, and streamlined form handling logic.

--- a/src/app/moduleAdmin/component/main-card/main-card.component.html
+++ b/src/app/moduleAdmin/component/main-card/main-card.component.html
@@ -4,7 +4,8 @@
   </div>
   <div class="card p-4">
     <button *ngIf="isNotIndex" type="button" routerLink="{{urlAjout}}" class="btn btn-primary mb-3 mt-2 ms-auto btn-add">{{ajout}}</button>
-    <button *ngIf="isUser" class="btn btn-outline-info mb-5 mt-2 ms-auto btn-add" (click)="viewDeactivatedUser()">{{toggle}}</button>
+    <button *ngIf="isUser" class="btn btn-outline-info  mt-2 ms-auto btn-add" (click)="viewDeactivatedUser()">{{toggle}}</button>
+    <button *ngIf="isUser" class="btn btn-outline-secondary mb-5 mt-2 ms-auto btn-add" (click)="viewAdmin()">{{adminButton}}</button>
     <div *ngIf="isLoading" class="text-center my-4">
       <div class="spinner-border text-primary" role="status">
         <span class="visually-hidden">Chargement...</span>
