--- a/src/app/moduleAdmin/pages/UserSection/user-modify/user-modify.component.html
+++ b/src/app/moduleAdmin/pages/UserSection/user-modify/user-modify.component.html
@@ -81,7 +81,7 @@
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-start mt-5">
           <button routerLink="/admin/users" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
-          <button type="reset" class="btn btn-outline-secondary btn-lg px-4 me-md-2" (click)="clearform()">Annuler</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4 me-md-2" (click)="clearform()" >Annuler</button>
           <button type="button" class="btn btn-success btn-lg px-4 me-md-2" (click)="modifyUser()">Modifier</button>
         </div>
       </form>
