--- a/src/app/pages/panier/item-in-cart/item-in-cart.component.html
+++ b/src/app/pages/panier/item-in-cart/item-in-cart.component.html
@@ -1,17 +1,16 @@
-<!--utiliser un NgFor et NgIf pour creer des rows d'item dans la colone-->
 <div class="row">
     <div class="col">
         <div class="row-card">
             <div class="card mb-4" style="width:100%; height: auto">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="assets/images/categories/headphones.jpg" width="200" class="img-fluid rounded-start" alt="...">
+                        <img [src]="item.product.images[0]" width="200" class="img-fluid rounded-start" alt="">
                     </div>
 
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Title product</h5>
-                            <p class="card-text">Description, or short description of product</p>
+                            <h5 class="card-title">{{item.product.name}}</h5>
+                            <p class="card-text">{{item.product.description}}</p>
                             <div class="row">
                                 <div class="col">
                                     <div class="input-group">
@@ -34,7 +33,7 @@
                                 </div>
 
                                 <div class="col" style="margin: 0">
-                                    <label><strong>$ Price in Dollars</strong></label>
+                                    <label><strong>${{item.subTotal}}</strong></label>
                                 </div>
                             </div>
                         </div>
