panier saves items in the front end now, but no delete yet

--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md">
     <div class="container d-flex justify-content-between align-items-center">
-        <a class="navbar-brand d-none d-md-block" href="#">
+        <a class="navbar-brand d-none d-md-block" routerLink="">
             <img src="assets/images/logo/Logo JX-HIFI.png" alt="logo jx-hifi" width="100">
         </a>
 
