--- a/src/app/pages/payment-matt/info-card-payment/payment-form-matt/payment-form.component.html
+++ b/src/app/pages/payment-matt/info-card-payment/payment-form-matt/payment-form.component.html
@@ -22,7 +22,11 @@
       <div *ngIf="modePaiement !== 'paypal'">
         <div class="mb-3">
           <label for="numéroCarte" class="form-label">Numéro de la carte</label>
-          <input type="text" id="numéroCarte" name="numéroCarte" class="form-control" required>
+          <input type="text" id="numéroCarte" name="numéroCarte" class="form-control" (keyup)="validateCardInput()"
+          [class.is-invalid]="!validateCardInput() && cardNumber.length > 0" required>
+          <div class="invalid-feedback">
+            Numéro de carte invalide pour {{ modePaiement | titlecase }}.
+          </div>
         </div>
   
         <div class="row">
