Les order sont visible dans le dashboard et dans leur page detail respectif

--- a/src/app/moduleAdmin/pages/OrderSection/order-detail/order-detail.component.html
+++ b/src/app/moduleAdmin/pages/OrderSection/order-detail/order-detail.component.html
@@ -14,12 +14,13 @@
       <ng-template #productTemplate>
         <ul>
           <li *ngFor="let item of order.orderItems">
-            <ng-container *ngIf="!item.product.onSale; else specialTemplate">
+            {{item.productName}} x {{item.quantity}} ${{item.sousTotal}}
+            <!-- <ng-container *ngIf="!item.product.onSale; else specialTemplate">
               {{item.product.name}} - {{item.quantity}} x {{item.product.sellPrice}}$
             </ng-container>
            <ng-template #specialTemplate>
              {{item.product.name}} - {{item.quantity}} x {{item.product.specialPrice}}$
-           </ng-template>
+           </ng-template> -->
           </li>
         </ul>
       </ng-template>
