--- a/src/app/moduleAdmin/pages/OrderSection/order-ajout/order-ajout.component.html
+++ b/src/app/moduleAdmin/pages/OrderSection/order-ajout/order-ajout.component.html
@@ -1,5 +1,5 @@
 <div class="main-content-wrapper">
-  <div *ngIf="order&&user" class=" p-4 row flex-lg-row align-items-center g-5 py-5">
+  <!-- <div *ngIf="order&&user" class=" p-4 row flex-lg-row align-items-center g-5 py-5">
 
     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" >Ajout Commande</h1>
     <div class="col-lg-6">
@@ -118,5 +118,5 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 </div>
